Removed redundant routes
