# src/routes/comment.routes.ts
@@ -3,11 +3,11 @@ module.exports = app => {
   const router = require('express').Router()
   // Create a new comment
   router.post('/', comment.create)
-  // Retrieve all comments
-  router.get('/', comment.findAll)
+  // Retrieve all comments for a doc
+  router.get('/doc/:id', comment.findAll)
   // Delete a comment with id
   router.delete('/:id', comment.deleteOne)
   // Delete all comment
-  router.delete('/', comment.deleteAll)
+  // router.delete('/', comment.deleteAll)
   app.use('/api/comment', router)
 }
